--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,8 +108,8 @@
 }
 
 body {
-  /* background: var(--background); */
-  background: linear-gradient(
+  background: "#37003c";
+  background-image: linear-gradient(
     180deg,
     #37003c -17.03%,
     #000000 4.51%,
@@ -123,6 +123,14 @@ body {
   font-family: Poppins, Arial, Helvetica, sans-serif;
   /* scroll-behavior: smooth; */
   overflow-x: hidden !important;
+  overscroll-behavior: none;
+}
+
+#__next {
+   background-color: #0d0d0d;
+  color: white;
+  height: 100%;
+  overscroll-behavior: none;
 }
 
 .lineHeightFullPercentage {
