--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -235,3 +235,63 @@ box-shadow: 0px 0.81px 4.78px 0px rgba(114, 0, 255, 1);
   box-shadow :  0px 4px 28px 5px #000000CF;
 }
 
+
+.robot-image-animate {
+  transform : translateX(250px);
+  opacity : 1;
+  animation: translateXIn 1.5s linear forwards;
+}
+
+@keyframes translateXIn {
+  from {
+    transform: translateX(250px);
+   
+  }
+  to {
+    transform: translateX(0px);
+   
+  }
+}
+
+
+.robot-image-none-animate {
+  animation: translateXOut 1.5s linear forwards;
+}
+
+@keyframes translateXOut {
+  from {
+    transform: translateX(0px);
+   
+  }
+  to {
+    transform: translateX(250px);
+   
+  }
+}
+
+.form-container-1 {
+  animation: fadeInForm 2s  linear forwards;
+}
+
+@keyframes fadeInForm {
+   from {
+    opacity:  0;
+   }
+   to {
+    opacity: 1;
+   }
+}
+
+.form-container-0 {
+  animation: fadeOutForm 2s  linear forwards;
+  opacity: 0;
+}
+
+@keyframes fadeOutForm {
+   from {
+    opacity:  1;
+   }
+   to {
+    opacity: 0;
+   }
+}
