--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,14 +123,7 @@ body {
   font-family: Poppins, Arial, Helvetica, sans-serif;
   /* scroll-behavior: smooth; */
   overflow-x: hidden !important;
-  overscroll-behavior: none;
-}
-
-#__next {
-   background-color: #0d0d0d;
-  color: white;
-  height: 100%;
-  overscroll-behavior: none;
+  /* overscroll-behavior: none; */
 }
 
 .lineHeightFullPercentage {
