--- a/src/components/styles/Portfolio.module.css
+++ b/src/components/styles/Portfolio.module.css
@@ -406,7 +406,7 @@
 }
 
 .projectImage {
-  aspect-ratio: 16 / 9;
+  /* aspect-ratio: 16 / 9; */
   border-radius: 0.5rem;
   margin-bottom: 1rem;
   overflow: hidden;
@@ -439,8 +439,8 @@
 
 .image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 250px;
+  object-fit: fill;
 }
 
 .projectTitle {
