--- a/src/components/styles/Hero.module.css
+++ b/src/components/styles/Hero.module.css
@@ -12,7 +12,7 @@
   align-items: center;
   background-color: #f0f0f0;
   color: black; */
-  height: 100vh;
+  height: 100dvh;
   padding: 1rem;
   position: relative;
 }
