--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -295,3 +295,8 @@ box-shadow: 0px 0.81px 4.78px 0px rgba(114, 0, 255, 1);
     opacity: 0;
    }
 }
+
+.ytp-cued-thumbnail-overlay-image {
+   background-size: contain !important;
+   --webkit-background-size : contain !important;
+}
