--- a/src/components/styles/Portfolio.module.css
+++ b/src/components/styles/Portfolio.module.css
@@ -14,7 +14,6 @@
   top: 0;
   z-index: 1;
   overflow  : hidden;
-  
 }
 
 .linearRactBgContainer {
@@ -136,7 +135,6 @@
 }
 
 
-
 .awardSection {
   /* background: #1D1D1D66; */
   /* margin-top: 6rem; */
@@ -186,7 +184,7 @@
 
 .navItem {
   font-size: 0.875rem;
-  font-weight: 500;
+  font-weight: 600;
   background: none;
   border: none;
   cursor: pointer;
@@ -195,6 +193,7 @@
   background: #9f99e200;
   padding: 10px 20px;
 }
+
 
 
 .tabACtive {
@@ -236,13 +235,34 @@
     linear-gradient(94.05deg, #FAAFC8 1.41%, #E7B4FF 92.79%);
     background-clip: text;
     color: transparent;
-    font-weight: 500;
-    font-size: clamp(.8rem, 2vw , .8rem);
+    font-weight: 600;
+    font-size: clamp(.8rem, 2vw , .9rem);
     text-wrap: nowrap;
     text-transform: capitalize;
 }
 
+.tags {
+  display: flex;
+  justify-content: flex-start;
+  color : #fff;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
 
+.tags span {
+   border: 1px solid rgb(196, 196, 196);
+   padding : 10px 20px;
+   /* text-decoration: underline; */
+   cursor: pointer;
+   transition: background .2s linear;
+   font-size: 12px;
+}
+
+.tags span:hover {
+   background: #fff;
+   color: purple;
+}
 
 @media (width <= 1024px) {
   
@@ -277,7 +297,7 @@
 
 @media (width <= 600px) {
   .portfolioGrid {
-     gap: 0rem !important;
+     gap: 1rem !important;
   }
 }
 
@@ -381,8 +401,7 @@
 }
 
 .projectCard {
-  background:transparent;
-  /* backdrop-filter: blur(10px); */
+  background: #9a16ce1a;
   border-radius: 0.75rem;
   padding: 1.5rem;
   text-align: center;
@@ -408,13 +427,12 @@
 .projectImage {
   /* aspect-ratio: 16 / 9; */
   border-radius: 0.5rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
   overflow: hidden;
-  border: 6.92px solid #000032
 }
 
 .projectImage1 {
-  background: linear-gradient(135deg, #60a5fa 0%, #2563eb 100%);
+  /* background: linear-gradient(135deg, #60a5fa 0%, #2563eb 100%); */
 }
 
 .projectImage2 {
@@ -439,8 +457,10 @@
 
 .image {
   width: 100%;
-  height: 250px;
-  object-fit: fill;
+  height: auto;
+  object-fit: contain;
+  aspect-ratio: 16 / 16;
+  /* border: 6.92px solid #000032 */
 }
 
 .projectTitle {
@@ -666,7 +686,7 @@
 
 .activeprojectImage {
   width: 100%;
-  border: 5.92px solid #000032;
+  /* border: 5.92px solid #000032; */
   margin-bottom: 2rem;
   animation: fadeIn .4s linear;
   /* height: 400px; */
@@ -684,7 +704,7 @@
 .activeprojectImage iframe {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .ractBg3 {
@@ -827,4 +847,11 @@
   font-weight: 500;
   margin-top: 0.5rem;
   border: 1px solid rgba(102, 126, 234, 0.2);
+}
+
+@media (width <= 600px) {
+  .activeprojectImage iframe {
+     height: 250px !important;
+     object-fit: contain;
+  }
 }
