--- a/src/components/styles/Portfolio.module.css
+++ b/src/components/styles/Portfolio.module.css
@@ -1,6 +1,6 @@
 .container {
   min-height: 100vh;
-  background: linear-gradient(to bottom, #000000 0%, #1e0023 20%, #3a003d 50%, #2a002b 80%, #1b001e 100%);
+  /* background: linear-gradient(to bottom, #000000 0%, #1e0023 20%, #3a003d 50%, #2a002b 80%, #1b001e 100%); */
   width: 100%;
   overflow-x: hidden;
 }
@@ -10,7 +10,7 @@
   /* border-radius: 2rem; */
   min-height: 100%;
   width: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 1;
   overflow  : hidden;
@@ -385,6 +385,8 @@
   position: relative;
   width: 100%;
   padding-bottom: 6rem;
+  z-index: 10;
+  /* background-color: #ffffff09; */
 }
 
 @media (min-width: 768px) {
@@ -401,7 +403,7 @@
 }
 
 .projectCard {
-  background: #9a16ce1a;
+  background: #9a16ce44;
   border-radius: 0.75rem;
   padding: 1.5rem;
   text-align: center;
@@ -732,7 +734,7 @@
   backdrop-filter: blur(20px);
   border-radius: 20px;
   padding: 1.5rem;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1); */
   /* border: 1px solid rgba(255, 255, 255, 0.2); */
   flex-wrap: wrap;
   position: relative;
