feat: Update footer year and company name; add WhatsApp icon; enhance contact form with phone input and requirement selection
- Updated footer copyright year and company name from "2024 Abhinav Technology" to "2025 Abhiwan Technology".
- Added WhatsApp icon for quick contact in the BackToTop component.
- Enhanced ContactUs component with a phone input field and a dropdown for requirement selection.
- Changed font file from "nasalizationrg.ttf" to "NasalizationRg.otf".
- Updated various statistics and testimonials with new values and images.
- Improved styling for custom select dropdown and various components.
- Added NotFound page for handling 404 errors.
- Fixed multiple minor bugs and improved responsiveness across components.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -300,3 +300,42 @@ box-shadow: 0px 0.81px 4.78px 0px rgba(114, 0, 255, 1);
    background-size: contain !important;
    --webkit-background-size : contain !important;
 }
+
+.custom-select {
+  min-width: 100%;
+  position: relative;
+}
+
+.custom-select select {
+  appearance: none;
+  width: 100%;
+  padding: 0.675em 6em 0.675em 1em;
+  background-color: rgba(0, 0, 0, 0.514);
+  border: 1px solid #caced173;
+  border-radius: 0.25rem;
+  color: #fafafa;
+  cursor: pointer;
+}
+
+.custom-select::before,
+.custom-select::after {
+  --size: 0.3rem;
+  content: "";
+  position: absolute;
+  right: 1rem;
+  pointer-events: none;
+}
+
+.custom-select::before {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-bottom: var(--size) solid rgb(255, 255, 255);
+  top: 40%;
+}
+
+.custom-select::after {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-top: var(--size) solid rgb(255, 255, 255);
+  top: 55%;
+}
