--- a/src/components/styles/Hero.module.css
+++ b/src/components/styles/Hero.module.css
@@ -133,7 +133,7 @@
   letter-spacing: 1px;
   line-height: 1;
   font-family: Nasalization;
-  font-size: clamp(2rem, 16vw, 16rem);
+  font-size: clamp(2rem, 14vw, 16rem);
 }
 
 .sabHeading {
@@ -174,14 +174,14 @@
 .arrowRightSection {
   position: absolute;
   right : 5rem;
-  top : 7rem;
+  top : 3rem;
   scale: .7;
   z-index: 100;
   cursor: pointer;
 }
 
 .arrowLeftSection svg, .arrowRightSection svg {
-  transform: translateY(-15px);
+  transform: translateY(5px) translateX(-10px);
 }
 
 .counterText {
@@ -218,7 +218,7 @@
 
 @media (width <= 1200px) {
   .arrowLeftSection {
-    top : -5rem;
+    top : 0;
     scale: .6;
     left: 1rem;
   }
@@ -261,6 +261,7 @@
 
   .arrowRightSection {
      right : -2rem;
+     bottom: -50rem;
      scale: .6;
   }
 
@@ -268,9 +269,14 @@
      font-size: 11px;
   }
 
+  .vrGirl {
+    /* top: 0; */
+    bottom: 8%;
+  }
+
   .vrGirl img {
     object-fit: contain;
-    scale: 1.3;
+    scale: 1.9;
   }
 }
 
@@ -319,5 +325,36 @@
   .sabHeading {
     letter-spacing: 6.5vw;
     margin-left: 100px;
+  }
+}
+
+@media (width <= 1400px) and (height <= 700px) {
+  .statsContainer {
+     bottom: 5%;
+     scale: .8;
+  }
+
+   .arrowLeftSection {
+     top: 0;
+  }
+
+  .arrowRightSection {
+    top: 0;
+  }
+}
+
+@media (width <= 1024px) and (height <= 768px) {
+  .arrowLeftSection {
+     top: 2%;
+  }
+
+  .statsContainer {
+     bottom: 5%;
+     scale: 1;
+  }
+
+  .sabHeading {
+    letter-spacing: 6vw;
+     margin-left: 80px;
   }
 }
