fix: Update layout and styles for improved responsiveness; add viewport meta tag and adjust CSS for .arrowLeftSection and .vrGirl

--- a/src/components/styles/Hero.module.css
+++ b/src/components/styles/Hero.module.css
@@ -334,7 +334,7 @@
      scale: .8;
   }
 
-   .arrowLeftSection {
+  .arrowLeftSection {
      top: 0;
   }
 
@@ -343,9 +343,18 @@
   }
 }
 
+
+@media (width <= 1360px) and (height <= 700px) {
+  .vrGirl {
+     transform: translate(-50%, 15%) scale(.8);
+  }
+}
+
+
 @media (width <= 1024px) and (height <= 768px) {
   .arrowLeftSection {
      top: 2%;
+     /* scale: .6; */
   }
 
   .statsContainer {
