--- a/src/components/styles/TechShowcase.module.css
+++ b/src/components/styles/TechShowcase.module.css
@@ -186,22 +186,23 @@
 @media (width <= 768px) {
    .bottom_left_OutlineText {
      right: 31rem !important;
-     top: 450px !important;
+     top: 400px !important;
   }
 
   .mainCardBottomHeading {
-    bottom: -3rem !important;
+    bottom: -5rem !important;
     font-size: 46px;
   }
 
   .top_right_OutlineText {
-      left: 31rem !important;
+      /* left: 38rem !important; */
   }
-
-
 }
 
-@media (width <= 600px) {
+
+
+
+@media (width <= 630px) {
   .frontImage  {
      scale: 1.3 !important;
   }
@@ -220,9 +221,7 @@
     text-align: center;
   }
 
-  .bottom_left_OutlineText {
-    top: 0 !important;
-  }
+ 
 
   .mainCardBottomHeading {
     bottom: -5rem !important;
@@ -241,9 +240,8 @@
  
 
   .bottom_left_OutlineText {
-    right: 17rem !important;
-    top: 25.5rem !important;
-    font-size: 26px;
+     right: 20rem !important;
+     top: 320px !important;
   }
 
   .techShowcaseGrid {
